fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,13 +105,11 @@ html {
 a {
   color: #FCFCF4; }
 
-.navrow {
+.row {
   display: flex;
   flex-direction: row; }
 
-.row {
-  display: flex;
-  flex-direction: row;
+.infoRow {
   height: calc(100vh - 50px); }
 
 .interestRow {
